make it work on safari; change order of declaration

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
   <meta
     http-equiv="Content-Security-Policy"
     content="default-src 'none';
-	           script-src 'self' unpkg.com;
+	           script-src 'self' unpkg.com 'unsafe-inline';
              style-src 'self' unpkg.com 'unsafe-inline';
              img-src 'self' unpkg.com;"
   >
   <title>Vanilla</title>
   <meta name="viewport" content="width=device-width">
   <script type="module" src="app.js"></script>
+  <script type="module">
+    console.log("testing");
+  </script>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
