use custom vh android fix; remove inline js added for earlier safari debugging

--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
   <meta
     http-equiv="Content-Security-Policy"
     content="default-src 'none';
-	           script-src 'self' unpkg.com 'unsafe-inline';
+	           script-src 'self' unpkg.com;
              style-src 'self' unpkg.com 'unsafe-inline';
              img-src 'self' unpkg.com;"
   >
   <title>Vanilla</title>
   <meta name="viewport" content="width=device-width">
   <script type="module" src="app.js"></script>
-  <script type="module">
-    console.log("testing");
-  </script>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
